# islamic-history-chatbot

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  chat_with_wiki.py  history_downloader.py  llm-wiki.ipynb  main.py  pyproject.toml  rag.py  streamlit_app.py
history_pages/: Abbasid_Caliphate.txt  Al-Andalus.txt  Ayyubid_dynasty.txt  Fatimid_Caliphate.txt  History_of_Islam.txt  Islamic_Golden_Age.txt  Mamluk_Sultanate_(Cairo).txt  Muhammad.txt  Ottoman_Empire.txt  Rashidun_Caliphate.txt  Umayyad_Caliphate.txt
my_notes/: note_remove.md
