[project]
name = "athar-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.20",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.5",
    "python-dotenv>=1.2.2",
    "wikipedia-api>=0.14.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
